--- a/Architecture/For-Developers/index.html
+++ b/Architecture/For-Developers/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Firm Architecture and Design</title>
 </head>
 <body class="bg-black">
@@ -37,8 +36,7 @@
          </div>
      </nav>    
 
-    <header class="text-white d-flex flex-column justify-content-center align-items-center" data-aos="fade-up"
-    data-aos-duration="3000">
+    <header class="text-white d-flex flex-column justify-content-center align-items-center">
        <h1 class="mb-4">
            معماری و طراحی شرکتی
        </h1>
@@ -53,9 +51,7 @@
     <section class="about-us pt-5 my-4 text-white">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-8" data-aos="fade-left"
-                data-aos-offset="300"
-                data-aos-easing="ease-in-sine">
+                <div class="col-lg-8">
                     <h2>
                         درباره ما
                     </h2>
@@ -90,17 +86,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4" data-aos="fade-right"
-                data-aos-offset="300"
-                data-aos-easing="ease-in-sine">
+                <div class="col-lg-4">
                     <img src="./assets/images/11.jpeg" alt="" width="100%">
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="exprience my-5" data-aos="fade-up"
-    data-aos-duration="2000">
+    <section class="exprience my-5">
         <div class="container">
             <div class="row">
                <div class="col-12 text-warning d-flex justify-content-center align-items-center exprience-mobile">
@@ -162,14 +155,10 @@
     <section class="learning pt-5 my-5">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-6" data-aos="fade-left"
-                data-aos-offset="300"
-                data-aos-easing="ease-in-sine">
+                <div class="col-md-6">
                     <img src="./assets/images/3.jpeg" alt="" width="100%">
                 </div>
-                <div class="col-md-6 text-white d-flex flex-column align-items-center" data-aos="fade-right"
-                data-aos-offset="300"
-                data-aos-easing="ease-in-sine">
+                <div class="col-md-6 text-white d-flex flex-column align-items-center">
                     <h2 class="text-center">
                         تجربه یادگیری به یاد ماندنی
                     </h2>
@@ -185,9 +174,7 @@
         </div>
     </section>
 
-    <section class="favorite-project pt-5 my-5" data-aos="flip-left"
-    data-aos-easing="ease-out-cubic"
-    data-aos-duration="2000">
+    <section class="favorite-project pt-5 my-5">
         <div class="container favorite-project-bg">
             <div class="row">
                 <div class="col-xl-5 col-md-4">
@@ -206,9 +193,7 @@
     <section class="architecture pt-5 my-5 text-white">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 order-md-1 order-2" data-aos="fade-left"
-                data-aos-offset="300"
-                data-aos-easing="ease-in-sine">
+                <div class="col-lg-6 order-md-1 order-2">
                     <h2>
                         معماری و طراحی کارخانه
                     </h2>
@@ -228,9 +213,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 order-md-2 order-1" data-aos="fade-right"
-                data-aos-offset="300"
-                data-aos-easing="ease-in-sine">
+                <div class="col-lg-6 order-md-2 order-1">
                     <img src="./assets/images/5.jpg" alt="" width="100%">
                 </div>
             </div>
@@ -284,11 +267,7 @@
             </div>
         </div>
     </footer>
-    
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+
     <script src="./assets/js/bootstrap.bundle.js"></script>
 
 </body>
